overflow scroll issue solved on landing and general css

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -7,7 +7,7 @@
 .tab-div {
   width: 82%;
   height: 100%;
-  overflow: scroll;
+  /* overflow: scroll; */
 }
 
 /* cellphone */
