--- a/src/css/music.css
+++ b/src/css/music.css
@@ -38,6 +38,9 @@
       display: flex;
       flex-direction: column;
     }
+    .iframe-div {
+      margin-bottom: 0;
+    }
 
     .music-iframe {
       width: 275px;
