--- a/src/css/tech.css
+++ b/src/css/tech.css
@@ -3,8 +3,10 @@
     justify-content: center;
     flex-wrap: wrap;
     height: 100%;
-    margin-left: 2%;
-    margin-right: 2%;
+    width: 100%;
+    /* margin-left: 2%; */
+    /* margin-right: 2%; */
+    overflow: scroll;
   }
   
   .tech-text {
